methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:1: error: type jaune is not a member of object java.awt.Color
avance(2);setCouleurBrosse(c:Color.jaune);fairev()
                                   ^MethodsPicture:1: error: not found: value c
avance(2);setCouleurBrosse(c:Color.jaune);fairev()
                           ^